# CopyApp

./: .gitignore  CMakeLists.txt
src/: main.cpp
